@@ -79,7 +79,7 @@ export(
 "SendOutlookMail", "MultMerge", "ToWrdB", "ToWrdPlot", "WrdBookmark","WrdOpenFile",
 "CmToPts", "PtsToCm","PlotPairs", "IQRw", "ImputeKnn", "AllIdentical","CountWorkDays",
 "VanWaerdenTest", "RSessionAlive", "RTempdirAlive", "StripAttr", "PlotConDens", "StrSplit", "SplitToCol",
-"CmykToCmy", "CmyToCmyk", "RgbToCmy", "CmykToRgb", "RevCode"
+"CmykToCmy", "CmyToCmyk", "RgbToCmy", "CmykToRgb", "RevCode", "MADCI"
 )
 
 
@@ -100,8 +100,8 @@ importFrom("utils", "capture.output", "combn", "head", "help.search", "ls.str", 
 importFrom("boot", "boot", "boot.ci", "corr")
 importFrom("mvtnorm", "qmvt", "pmvnorm")
 importFrom("rstudioapi", "hasFun")
-
-importFrom(Rcpp, evalCpp)
+importFrom("gld", "dgl","pgl","fit.fkml")
+importFrom("Rcpp", "evalCpp")
 
 importFrom("MASS", "boxcox", "fractions")
 importFrom("expm", "%^%")
