@@ -7,6 +7,7 @@ NEW FUNCTIONS ADDED:
     to relative risks.
   * RevCode() reverses the codes of a numeric variable (e.g. a Likert 
     scale).  
+  * MADCI() calculates confidence intervals for the median absolute deviation(s).  
 
 UPDATED FUNCTIONS:
   * The Format() argument "leading" has been replaced by "ldigits". Leading zeros
@@ -14,6 +15,7 @@ UPDATED FUNCTIONS:
     character coding like "000".
   * BinomDiffCI() gets two further methods "haldane" and "jeffery perks". 
   * XLView() gets a new argument "sep" (following a request by Mahboob).
+  * CutQ() accepts integer number for breaks.
 
   
 BUGFIXES:
